fix 'all filters' btn not appearing on mobile

--- a/less/filters.less
+++ b/less/filters.less
@@ -298,4 +298,7 @@ form[app-search-filters] {
   .flex();
   justify-content: center;
   padding-top: 5px;
+  @media @phone {
+    width: 100% !important;
+  }
 }
